// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect component with checkbox false should render correctly with all the props given 1`] = `
.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #546A7F;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3::after,
.c3:hover::after {
  border-width: 0.1rem;
  border-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #b0bcc8;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxjAm {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c14 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2rem;
  cursor: pointer;
}

.c14 * {
  fill-opacity: 1;
  fill: #607890;
}

.c15 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c15 * {
  fill-opacity: 1;
  fill: #607890;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c10 {
  background-color: transparent;
  border: none;
  border-radius: 2rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid;
  padding: 0.2rem 0.6rem 0.2rem 1rem;
  border-color: #C7D0D8;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10:focus {
  outline: none;
}

.c10 .c13 {
  font-size: 1.2rem;
  padding: 0.4rem;
  border-radius: 50%;
  font-weight: 600;
}

.c10 .c11 {
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 2.6rem;
}

.c10 .c11 + .c13 {
  cursor: pointer;
  margin-left: 0.6rem;
}

.c10 .c13 {
  background-color: #eff2f4;
}

.c10 .c13 * {
  fill: #b0bcc8;
}

.c10 .c13:hover {
  background-color: #eff2f4;
}

.c10 .c13:hover * {
  fill: #b0bcc8;
}

.c10:hover {
  border-color: #C7D0D8;
}

.c10 .c11 {
  color: #435465;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 300;
  width: 100%;
  margin: 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c13 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: 0.8rem;
}

.c0 .c8 > .c13 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
  fill: #13181D;
}

.c0 .c8 > .c13 * {
  fill: #b0bcc8;
}

<div>
  <div
    class="c0"
    disabled=""
    id="pharmacy-wrapper"
    placeholder="Please Select"
  >
    <div
      class="c1 c2"
      id="pharmacy-input-wrapper"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="pharmacy-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="pharmacy-input"
            placeholder="1 options selected"
            type="text"
            value="all"
          />
          <label
            class="c6 c7"
            for="pharmacy-input"
          >
            Pharmacy
          </label>
        </div>
        <div
          class="c8 c9"
          id="pharmacy-count"
        >
          <button
            class="c10"
          >
            <span
              class="c11 c12"
            >
              1
            </span>
            <svg
              class="c13 c14"
              data-testid="cancel-chip"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </button>
          <svg
            class="c13 c15"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox false should render correctly with default props 1`] = `
.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #546A7F;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxiKw,
.c3:focus-within:hover .sc-AxiKw,
.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb {
  color: #126AFA;
}

.c3:focus-within .sc-AxiKw *,
.c3:focus-within:hover .sc-AxiKw *,
.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c11 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c11 * {
  fill-opacity: 1;
  fill: #607890;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: 25.6rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c10 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: 0.8rem;
}

.c0 .c8 > .c10 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-multiSelect-wrapper"
    placeholder="Please Select . . ."
  >
    <div
      class="c1 c2"
      id="medly-multiSelect-input-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-multiSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-multiSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-multiSelect-input"
          />
        </div>
        <div
          class="c8 c9"
          id="medly-multiSelect-count"
        >
          <svg
            class="c10 c11"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with all the props given 1`] = `
.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
  cursor: not-allowed;
  background-color: #F7F8F9;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #546A7F;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3::after,
.c3:hover::after {
  border-width: 0.1rem;
  border-color: #C7D0D8;
}

.c3 input {
  color: #435465;
}

.c3 .c6 {
  color: #b0bcc8;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #b0bcc8;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #b0bcc8;
}

.c3 ~ .sc-AxjAm {
  color: #b0bcc8;
}

.c3 * {
  cursor: not-allowed;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  padding-bottom: 0.7rem;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c14 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2rem;
  cursor: pointer;
}

.c14 * {
  fill-opacity: 1;
  fill: #607890;
}

.c15 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c15 * {
  fill-opacity: 1;
  fill: #607890;
}

.c12 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c10 {
  background-color: transparent;
  border: none;
  border-radius: 2rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  max-width: -webkit-max-content;
  max-width: -moz-max-content;
  max-width: max-content;
  cursor: default;
  border: 1px solid;
  padding: 0.2rem 0.6rem 0.2rem 1rem;
  border-color: #C7D0D8;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10:focus {
  outline: none;
}

.c10 .c13 {
  font-size: 1.2rem;
  padding: 0.4rem;
  border-radius: 50%;
  font-weight: 600;
}

.c10 .c11 {
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 2.6rem;
}

.c10 .c11 + .c13 {
  cursor: pointer;
  margin-left: 0.6rem;
}

.c10 .c13 {
  background-color: #eff2f4;
}

.c10 .c13 * {
  fill: #b0bcc8;
}

.c10 .c13:hover {
  background-color: #eff2f4;
}

.c10 .c13:hover * {
  fill: #b0bcc8;
}

.c10:hover {
  border-color: #C7D0D8;
}

.c10 .c11 {
  color: #435465;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 300;
  width: 100%;
  margin: 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c13 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: 0.8rem;
}

.c0 .c8 > .c13 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
  fill: #13181D;
}

.c0 .c8 > .c13 * {
  fill: #b0bcc8;
}

<div>
  <div
    class="c0"
    disabled=""
    id="pharmacy-wrapper"
    placeholder="Please Select"
  >
    <div
      class="c1 c2"
      id="pharmacy-input-wrapper"
    >
      <div
        class="c3"
        disabled=""
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="pharmacy-helper-text"
            autocomplete="off"
            class="c5"
            disabled=""
            id="pharmacy-input"
            placeholder="1 options selected"
            type="text"
            value="all"
          />
          <label
            class="c6 c7"
            for="pharmacy-input"
          >
            Pharmacy
          </label>
        </div>
        <div
          class="c8 c9"
          id="pharmacy-count"
        >
          <button
            class="c10"
          >
            <span
              class="c11 c12"
            >
              1
            </span>
            <svg
              class="c13 c14"
              data-testid="cancel-chip"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59 7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12 5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                fill="#000"
                fill-opacity=".54"
              />
            </svg>
          </button>
          <svg
            class="c13 c15"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`MultiSelect component with checkbox true should render correctly with default props 1`] = `
.c7 {
  top: 0;
  left: 0;
  cursor: text;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  position: absolute;
  -webkit-transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  transition: all 150ms cubic-bezier(0.4,0,0.2,1);
  font-size: 1.6rem;
  line-height: 2.6rem;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  touch-action: manipulation;
  -webkit-transform: translate3d(0,58%,0);
  -ms-transform: translate3d(0,58%,0);
  transform: translate3d(0,58%,0);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  box-sizing: border-box;
  height: 5.6rem;
  padding: 0 1.6rem;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  cursor: text;
  border-radius: 0.4rem 0.4rem 0 0;
  background-color: #eff2f4;
}

.c3 .c6 {
  color: #546A7F;
}

.c3 .sc-AxiKw,
.c3 .sc-AxhCb {
  color: #546A7F;
}

.c3 .sc-AxiKw *,
.c3 .sc-AxhCb * {
  fill: #546A7F;
}

.c3 ~ .sc-AxjAm {
  color: #546A7F;
}

.c3::after {
  content: '';
  width: 100%;
  height: 0;
  position: absolute;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  border-top: 0.1rem solid #546A7F;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c3:hover::after,
.c3:focus-within::after {
  border-width: 0.2rem;
}

.c3:focus-within,
.c3:focus-within:hover {
  background-color: #E7F0FF;
}

.c3:focus-within::after,
.c3:focus-within:hover::after {
  border-color: #126AFA;
}

.c3:focus-within .c6,
.c3:focus-within:hover .c6 {
  color: #126AFA;
}

.c3:focus-within .sc-AxiKw,
.c3:focus-within:hover .sc-AxiKw,
.c3:focus-within .sc-AxhCb,
.c3:focus-within:hover .sc-AxhCb {
  color: #126AFA;
}

.c3:focus-within .sc-AxiKw *,
.c3:focus-within:hover .sc-AxiKw *,
.c3:focus-within .sc-AxhCb *,
.c3:focus-within:hover .sc-AxhCb * {
  fill: #126AFA;
}

.c3:focus-within input::-webkit-input-placeholder,
.c3:focus-within:hover input::-webkit-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::-moz-placeholder,
.c3:focus-within:hover input::-moz-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input:-ms-input-placeholder,
.c3:focus-within:hover input:-ms-input-placeholder {
  color: rgba(0,90,238,.2);
}

.c3:focus-within input::placeholder,
.c3:focus-within:hover input::placeholder {
  color: rgba(0,90,238,.2);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
}

.c2 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-width: 20rem;
  margin: 0.8rem 0;
}

.c5 {
  color: #13181D;
  font-size: 1.6rem;
  width: 100%;
  margin: 0;
  padding: 0;
  line-height: 2.6rem;
  box-sizing: border-box;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  background: transparent;
  border: none;
  text-overflow: ellipsis;
}

.c5:focus {
  outline: none;
}

.c5:focus::-webkit-input-placeholder {
  opacity: 1;
}

.c5:focus::-moz-placeholder {
  opacity: 1;
}

.c5:focus:-ms-input-placeholder {
  opacity: 1;
}

.c5:focus::placeholder {
  opacity: 1;
}

.c5::-webkit-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::-moz-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:-ms-input-placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5::placeholder {
  opacity: 0;
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
}

.c5:not(:placeholder-shown) + .c6,
.c5:focus + .c6 {
  -webkit-transform: translate3d(0,20%,0) scale(0.75);
  -ms-transform: translate3d(0,20%,0) scale(0.75);
  transform: translate3d(0,20%,0) scale(0.75);
}

.c11 {
  overflow: visible;
  -webkit-transition: all 100ms linear;
  transition: all 100ms linear;
  font-size: 2.4rem;
  cursor: inherit;
}

.c11 * {
  fill-opacity: 1;
  fill: #607890;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  width: 25.6rem;
  margin: 0.8rem 0.8rem 0.8rem 0;
}

.c0 .c1 {
  margin: 0;
}

.c0 .c1 label {
  pointer-events: none;
}

.c0 .c1 div,
.c0 .c1 input,
.c0 .c1 label {
  cursor: pointer;
}

.c0 .c1:focus-within input {
  cursor: text;
}

.c0 .c1 input {
  padding-right: 1.6rem;
}

.c0 .c8 > .c10 {
  -webkit-transition: all 100ms ease-out;
  transition: all 100ms ease-out;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  margin-left: 0.8rem;
}

.c0 .c8 > .c10 * {
  -webkit-transition: fill 100ms ease-out;
  transition: fill 100ms ease-out;
  fill: #13181D;
}

<div>
  <div
    class="c0"
    id="medly-multiSelect-wrapper"
    placeholder="Please Select . . ."
  >
    <div
      class="c1 c2"
      id="medly-multiSelect-input-wrapper"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <input
            aria-describedby="medly-multiSelect-helper-text"
            autocomplete="off"
            class="c5"
            id="medly-multiSelect-input"
            placeholder="Please Select . . ."
            type="text"
            value=""
          />
          <label
            class="c6 c7"
            for="medly-multiSelect-input"
          />
        </div>
        <div
          class="c8 c9"
          id="medly-multiSelect-count"
        >
          <svg
            class="c10 c11"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.792 14.97a1 1 0 0 1-1.584 0l-3.165-4.11a1 1 0 0 1 .793-1.61h6.328a1 1 0 0 1 .793 1.61l-3.165 4.11z"
              fill="#000"
            />
          </svg>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
